hphp/test/zend/bad/ext/gd/tests/imagecharup_error2.php
<?php

$result = imagecharup(tmpfile(), 1, 5, 5, 'C', 1);

?>